<resources>
    <string name="app_name">El Mercado</string>
    <string name="login">Login</string>
    <string name="already_hane_an_account">already had an account</string>
    <string name="register">Register</string>
    <string name="i_agree_to_the_terms_and_condition">I agree to the terms and condition</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="create_an_account">Create An Account</string>
    <string name="don_t_have_account_already">Don\'t have account already</string>
    <string name="login_image">login_image</string>
    <string name="title_checkout">Checkout</string>
    <string name="checkout_lbl_product_items">Product Items</string>
    <string name="checkout_lbl_selected_address">Selected address</string>
    <string name="checkout_lbl_items_receipt">Item reciept</string>
    <string name="lbl_subtotal">SubTotal</string>
    <string name="lbl_shipping_charge">Shipping charge</string>
    <string name="lbl_total_amount">Total</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">cash on delivery</string>
    <string name="btn_lbl_place_order">Checkout</string>
    <string name="content_description">content</string>
    <string name="title_favourite">Favourites</string>
    <string name="no_favourite_yet">No Favourite Items yet</string>

    <string name="myOrders">My Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="viewall">View All</string>
    <string name="nickname">Nickname</string>
    <string name="currency">Currency</string>
    <string name="signout">SIGN OUT</string>
    <string name="addressbook">Address book</string>
    <string name="ok">OK</string>
    <string name="addAddress">Add Address</string>
    <string name="city">City</string>
    <string name="postCode">Post/Zip Code</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="country">Country</string>
    <string name="addressLine1">Address Line 1</string>
    <string name="addressLine2">Address Line 2</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="save">Save</string>
    <string name="favorites">Favorites</string>
    <string name="checkout">Checkout</string>
    <string name="item_image">Item image</string>
    <string name="settings">Settings</string>
    <string name="zero_num">0</string>
    <string name="minus">Minus</string>
    <string name="plus">plus</string>
    <string name="required">Required</string>
    <string name="more_than_eight">must be more than 8 characters</string>
    <string name="doesnt_exist">not matching</string>
    <string name="registered_successfully">registered successfully</string>
    <string name="server_error">server error</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="email_already_exist">Email already exist</string>
    <string name="registered_failed">registered failed</string>
    <string name="settingsTitle">Settings</string>
    <string name="orderTitle">Orders</string>
    <string name="wishlistTitle">Wishllist</string>
    <string name="newAddressTitle">New Address</string>
    <string name="incorrect_email_or_password">Incorrect Email or Password</string>
    <string name="login_successfully">login successfully</string>
    <string name="no_network_connection">No network connection<font color='red'>!</font></string>
    <string name="something_went_wrong">Something went wrong<font color='red'>!</font></string>
    <string name="oops_no_data_here">Oops no data here<font color='red'>!</font></string>
    <string name="try_sign_out_and_signin_again">Try signout then signin again<font color='red'>!</font></string>
    <string name="back">Back</string>
    <string name="price_money">%1$s EGP</string>

    <string-array name="currencyArr">
        <item>EGP</item>
        <item>USD</item>
        <item>EUR</item>
        <item>AUD</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="coupon">Coupon</string>
    <string name="fill_the_coupon">Fill the coupon!</string>
    <string name="invalid_coupon">Invalid coupon!</string>
    <string name="coupon_applied_successfully">Coupon applied successfully</string>
    <string name="makeDefault">Make Default</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash on delivery</string>
    <string name="choose_your_preferred_payment_method">Choose your preferred payment method</string>
    <string name="payment_method">Payment method</string>
    <string name="paypal">Paypal</string>
    <string name="setAsDefaultAddress">Set As Default Address</string>
    <string name="added_successfully_to_cart">Added successfully to cart.</string>
    <string name="operation_failed">Operation Failed</string>
    <string name="operation_succeeded">Operation Succeeded</string>
    <string name="you_have_to_login_first">You have to login first</string>
    <string name="emptyOrdersMessage">There are no orders yet :-(</string>
    <string name="viewAll">View All</string>
    <string name="buy_some_items_first">Buy some items first!</string>
    <string name="search">Search</string>
    <string name="currencyTitle">Change Currency</string>
    <string name="emptyWishlistMessage">No favourites yet :-(</string>
    <string name="addressTitle">My Address</string>
    <string name="emptyAddressMessage">There are no addresses yet :-(</string>
    <string name="add_items_first">Add Items first!</string>
</resources>