<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_checkout_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/setiingsTitleId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settingsTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:padding="10dp">

            <Button
                android:id="@+id/currencyBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_chevron_right"
                android:gravity="left"
                android:text="@string/currency"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/addresBtnId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableEnd="@drawable/ic_chevron_right"
                android:text="@string/addressbook"
                android:textColor="@color/black"
                android:gravity="left"/>


            <Button
                android:id="@+id/login_outBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/signout"
                android:textColor="@color/red"
                android:textStyle="bold"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
