<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLightGray"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_search"
            android:layout_width="@dimen/back_btn_dimen"
            android:layout_height="@dimen/back_btn_dimen"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_arrow_back"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="@string/login_image"
        android:src="@drawable/im_login" />
    <LinearLayout
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="@dimen/btn_textSize"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/et_background"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/btn_textSize" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            android:textSize="@dimen/btn_textSize" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/appTheme"
        android:text="@string/login"
        app:cornerRadius="15dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account_already"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="bold"
            android:textSize="@dimen/lbl_text_view_textSize" />
        <TextView
            android:id="@+id/tvRegistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textSize="@dimen/lbl_text_view_textSize"
            android:layout_margin="10dp"/>
    </LinearLayout>



</LinearLayout>