<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorLightGray"
    android:gravity="top">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/checkout_register"
            android:layout_width="@dimen/back_btn_dimen"
            android:layout_height="@dimen/back_btn_dimen"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_black_color_back_24dp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/colorLightGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_activity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_firstNAme_registry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/et_background"
                android:hint="@string/first_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/btn_textSize" />

            <EditText
                android:id="@+id/et_lastName_registry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/et_background"
                android:hint="@string/last_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/btn_textSize" />

            <EditText
                android:id="@+id/et_email_registry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/et_background"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/btn_textSize" />



            <EditText
                android:id="@+id/et_password_registry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/et_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/btn_textSize" />

            <EditText
                android:id="@+id/et_CMpassword_registry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/et_background"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorSecondaryText"
                android:textSize="@dimen/btn_textSize" />

            <LinearLayout
                android:id="@+id/ll_terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:checked="false"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tv_terms_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/txt_terms_and_condition_textSize" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_register"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="50dp"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/black"
                android:padding="10dp"
                android:paddingStart="100dp"
                android:paddingEnd="100dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_textSize"
                android:textStyle="bold" >

            </Button>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_hane_an_account"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/lbl_text_view_textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/lbl_text_view_textSize"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>