<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/quantityLayout"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageButton
                    android:id="@+id/imageButtonPlus"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/plus"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/textViewOrderCount"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/zero_num"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageButtonPlus"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SmallSp" />

                <ImageButton
                    android:id="@+id/imageButtonMinus"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/minus"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textViewOrderCount"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_minus"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,ImageContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:id="@+id/imageViewItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/item_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewItem"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Super Crop Tee &amp; Drawstrin..." />

        <TextView
            android:id="@+id/textViewItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_textSize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewItem"
            tools:text="EGP346.93" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>